# Property-Exchange-Automation-Platform

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  config.py  desktop_backend_entry.py  pyproject.toml  todo.md
.claude/: downloader_closeout_gate.json  settings.json
assets/: excel_output_schema.json  runtime_config.json
data/: streaming_ingest.sqlite3
desktop_app/: backend_launch.js  backend_launch.test.js  backend_ready.js  backend_ready.test.js  build_backend_sidecar.js  electron-builder.yml  index.html  layout_contract.test.js  main.js  main.test.js  package-lock.json  package.json  package_desktop.js  package_desktop.test.js  packaging_manifest.test.js  preload.js  renderer.js  smoke_dom.js  smoke_driver.js  smoke_driver.test.js  styles.css  vite.config.ts
desktop_backend/: __init__.py  app_backend.py  app_config.py  app_service.py  http_contract.py  product_errors.py  progress_contract.py  record_identity.py  record_scope.py  requirements.lock.txt  runtime_dependencies.py
docs/: desktop_electron_smoke_report_2026-03-28.md  desktop_product_delivery_report_2026-03-26.md  desktop_product_release_blockers_2026-03-26.md  desktop_product_runbook_2026-03-26.md  desktop_storage_layout.md  development_plan.md  parser_rule_risk_report.md  project_layout.md  real_operation_test_report_2026-03-23.md  release_gate.md  submission_guide.md
frontend/: .gitignore  api.js  app.css  app.js  package-lock.json  package.json  vite.config.js
peap/: __init__.py  checks.py  cli.py  compat_compare.py  compat_payload.py  constants.py  daily_pipeline.py  download_cli.py  (+47 more)
(+282 files in other folders)
